Fix footer item spacing issue

--- a/_assets/src/page.footer.css
+++ b/_assets/src/page.footer.css
@@ -15,6 +15,10 @@
 }
 
 @media (--w-800) {
+  .site__footer li + li {
+    padding-left: calc(var(--gutter) * 1.5);
+  }
+  
   .site__footer a::after {
     position: absolute;
     top:    -1em;
@@ -30,7 +34,6 @@
 @media (--w-1120) {
   .site__footer li + li::before {
     content: "•";
-    padding-left:  0.25em;
-    padding-right: 0.25em;
+    padding-right: calc(var(--gutter) * 1.5);
   }
 }
